# EMPhyLib

./: .gitignore  CMakeLists.txt  README.md
include/EMPhyLib/: Constants.h  Functions.h
src/: CMakeLists.txt  EMPhyLib.cpp  EMPhyLib.h  Functions.cpp
src/EMField/: PointCharge.cpp  PointCharge.h
src/LinearAlgebra/: Vector3.cpp  Vector3.h
